--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -1424,7 +1424,7 @@
 
 			      <child>
 				<widget class="GtkScrolledWindow" id="scrolledwindow24">
-				  <property name="width_request">140</property>
+				  <property name="width_request">145</property>
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
 				  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
@@ -1490,7 +1490,7 @@
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
-		  <property name="expand">True</property>
+		  <property name="expand">False</property>
 		  <property name="fill">True</property>
 		</packing>
 	      </child>
