--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -3873,6 +3873,31 @@
 				  </child>
 
 				  <child>
+				    <widget class="GtkLabel" id="label201">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">&lt;b&gt;PENDING PULSES CODE&lt;/b&gt;</property>
+				      <property name="use_underline">False</property>
+				      <property name="use_markup">True</property>
+				      <property name="justify">GTK_JUSTIFY_LEFT</property>
+				      <property name="wrap">False</property>
+				      <property name="selectable">False</property>
+				      <property name="xalign">0.5</property>
+				      <property name="yalign">0.5</property>
+				      <property name="xpad">0</property>
+				      <property name="ypad">0</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="width_chars">-1</property>
+				      <property name="single_line_mode">False</property>
+				      <property name="angle">0</property>
+				    </widget>
+				    <packing>
+				      <property name="padding">20</property>
+				      <property name="expand">False</property>
+				      <property name="fill">False</property>
+				    </packing>
+				  </child>
+
+				  <child>
 				    <widget class="GtkScrolledWindow" id="scrolledwindow25">
 				      <property name="width_request">200</property>
 				      <property name="visible">True</property>
