--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -3531,6 +3531,23 @@
 				  <property name="spacing">0</property>
 
 				  <child>
+				    <widget class="GtkButton" id="button_pulse_free">
+				      <property name="visible">True</property>
+				      <property name="can_focus">True</property>
+				      <property name="label" translatable="yes">Free</property>
+				      <property name="use_underline">True</property>
+				      <property name="relief">GTK_RELIEF_NORMAL</property>
+				      <property name="focus_on_click">True</property>
+				      <signal name="clicked" handler="on_button_pulse_free_activate" last_modification_time="Mon, 01 May 2006 17:43:47 GMT"/>
+				    </widget>
+				    <packing>
+				      <property name="padding">0</property>
+				      <property name="expand">False</property>
+				      <property name="fill">False</property>
+				    </packing>
+				  </child>
+
+				  <child>
 				    <widget class="GtkButton" id="button_pulse_custom">
 				      <property name="visible">True</property>
 				      <property name="can_focus">True</property>
@@ -3538,7 +3555,7 @@
 				      <property name="use_underline">True</property>
 				      <property name="relief">GTK_RELIEF_NORMAL</property>
 				      <property name="focus_on_click">True</property>
-				      <signal name="clicked" handler="on_pulse_activate" last_modification_time="Fri, 21 Apr 2006 16:32:07 GMT"/>
+				      <signal name="clicked" handler="on_button_pulse_custom_activate" last_modification_time="Mon, 01 May 2006 17:44:15 GMT"/>
 				    </widget>
 				    <packing>
 				      <property name="padding">0</property>
@@ -3869,31 +3886,6 @@
 				      <property name="padding">0</property>
 				      <property name="expand">False</property>
 				      <property name="fill">True</property>
-				    </packing>
-				  </child>
-
-				  <child>
-				    <widget class="GtkLabel" id="label201">
-				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">&lt;b&gt;PENDING PULSES CODE&lt;/b&gt;</property>
-				      <property name="use_underline">False</property>
-				      <property name="use_markup">True</property>
-				      <property name="justify">GTK_JUSTIFY_LEFT</property>
-				      <property name="wrap">False</property>
-				      <property name="selectable">False</property>
-				      <property name="xalign">0.5</property>
-				      <property name="yalign">0.5</property>
-				      <property name="xpad">0</property>
-				      <property name="ypad">0</property>
-				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-				      <property name="width_chars">-1</property>
-				      <property name="single_line_mode">False</property>
-				      <property name="angle">0</property>
-				    </widget>
-				    <packing>
-				      <property name="padding">20</property>
-				      <property name="expand">False</property>
-				      <property name="fill">False</property>
 				    </packing>
 				  </child>
 
